--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -61,7 +61,7 @@ jobs:
         echo $LD_LIBRARY_PATH
         nvcc -V
         ./conda/build_conda.sh
-    - name: Saved pkgs to avoid to be removed
+    - name: Save pkgs to avoid to be removed
       # Waiting feature to be added: https://github.com/conda-incubator/setup-miniconda/issues/181
       run: mv /root/conda_pkgs_dir /root/conda_pkgs_dir_saved
 
