--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -60,7 +60,8 @@ jobs:
         echo $CUDA_HOME
         echo $LD_LIBRARY_PATH
         nvcc -V
-        echo "PY_VERSION=${${{ matrix.python-version }}//./}" >> $GITHUB_ENV
+        py_version=${{ matrix.python-version }}
+        echo "PY_VERSION=${py_version//./}" >> $GITHUB_ENV
         ./conda/build_conda.sh release ${{ secrets.CONDA_TOKEN }}
     - name: Save pkgs to avoid to be removed
       # Waiting feature to be added: https://github.com/conda-incubator/setup-miniconda/issues/181
