--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -62,6 +62,8 @@ jobs:
         nvcc -V
         py_version=${{ matrix.python-version }}
         echo "PY_VERSION=${py_version//./}" >> $GITHUB_ENV
+        export PY_VERSION=${py_version//./}
+        echo $PY_VERSION
         ./conda/build_conda.sh release ${{ secrets.CONDA_TOKEN }}
     - name: Save pkgs to avoid to be removed
       # Waiting feature to be added: https://github.com/conda-incubator/setup-miniconda/issues/181
