--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -38,14 +38,13 @@ build:
   number: 1
   string: py{{py}}_torch1.9.0_cuda11.1
   script:
-    # - "{{ PYTHON }} setup.py install --ext-all-sms"
-    - "{{ PYTHON }} setup.py install"
+    - "{{ PYTHON }} setup.py install --ext-all-sms"
 
 test:
   imports:
     - torchani
-    # - torchani.cuaev
-    # - torchani.mnp
+    - torchani.cuaev
+    - torchani.mnp
 
 about:
   home: https://roitberg.chem.ufl.edu
