--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -41,7 +41,7 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: "latest"
-        activate-environment: foo
+        activate-environment: foo${{ matrix.python-version }}
         auto-update-conda: false
         python-version: ${{ matrix.python-version }}
     - name: Conda info
