--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   stable-torch:
 
-    runs-on: [self-hosted, miniconda]
+    runs-on: ubuntu-18.04
     defaults:
       run:
         shell: bash -l {0}
@@ -58,7 +58,8 @@ jobs:
         echo $CUDA_HOME
         echo $LD_LIBRARY_PATH
         nvcc -V
-        python setup.py install --ext --only-sm80
+        pip install -e . --global-option="--ext" --global-option="--only-sm80"
+        python -c "import torchani; print(torchani.__file__)"
     - name: Download data files
       run: ./download.sh
     - name: install pytest
