--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   stable-torch:
 
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
     defaults:
       run:
         shell: bash -l {0}
