--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -58,8 +58,7 @@ jobs:
         echo $CUDA_HOME
         echo $LD_LIBRARY_PATH
         nvcc -V
-        # python setup.py install --ext --only-sm80
-        pip install -e . --global-option="--ext" --global-option="--only-sm80"
+        python setup.py install --ext --only-sm80
         python -c "import torchani; print(torchani.__file__)"
     - name: Download data files
       run: ./download.sh
