--- a/.github/workflows/runnable_submodules.yml
+++ b/.github/workflows/runnable_submodules.yml
@@ -18,10 +18,6 @@ jobs:
         python-version: [3.8]
 
     steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.8.0
-      with:
-        access_token: ${{ github.token }}
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
@@ -37,3 +33,7 @@ jobs:
       run: |
         python -m torchani.neurochem.trainer --tqdm tests/test_data/inputtrain.ipt  dataset/ani1-up_to_gdb4/ani_gdb_s01.h5 dataset/ani1-up_to_gdb4/ani_gdb_s01.h5
         python -m torchani.neurochem.trainer --tqdm tests/test_data/inputtrain.yaml  dataset/ani1-up_to_gdb4/ani_gdb_s01.h5 dataset/ani1-up_to_gdb4/ani_gdb_s01.h5
+
+concurrency:
+  group: runnable-submodules-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
