--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -18,10 +18,6 @@ jobs:
         python-version: [3.8]
 
     steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.8.0
-      with:
-        access_token: ${{ github.token }}
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -49,3 +45,7 @@ jobs:
       run: pip install pytest
     - name: Run all tests
       run: python -m pytest -v tests/*
+
+concurrency:
+  group: stable-torch-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
