--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -50,6 +50,7 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.SERVER_PUBKEY }}" > ~/.ssh/id_rsa.pub
         echo "${{ secrets.SERVER_PRIKEY }}" > ~/.ssh/id_rsa
+        chmod 400 ~/.ssh/id_rsa
     - name: Conda Build
       run: |
         echo $CUDA_HOME
