--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -68,6 +68,9 @@ jobs:
     - name: Save pkgs to avoid to be removed
       # Waiting feature to be added: https://github.com/conda-incubator/setup-miniconda/issues/181
       run: mv /root/conda_pkgs_dir /root/conda_pkgs_dir_saved
+    - name: Remove conda env
+      if: ${{ always() }}
+      run: conda env remove --name foo
 
 concurrency:
   group: conda-release-${{ github.sha }}
