--- a/.github/workflows/stable-torch.yml
+++ b/.github/workflows/stable-torch.yml
@@ -47,5 +47,5 @@ jobs:
       run: cd tests; python -m pytest -v -s *.py  # import torchani in root dir will not import the compiled one
 
 concurrency:
-  group: stable-torch-${{ github.event.pull_request.number || github.sha }}
+  group: stable-torch
   cancel-in-progress: true
