--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -26,6 +26,8 @@ jobs:
         ci/install_dependencies.sh
         pip install --upgrade mypy
         pip install types-PyYAML types-pkg_resources types-requests  # mypy library stubs
+    - name: Pytorch info
+      run: python -c 'from torch.utils.collect_env import get_pretty_env_info; print(get_pretty_env_info())'
     - name: Type checking with mypy
       run: mypy --ignore-missing-imports .
 
