--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -25,6 +25,8 @@ jobs:
       run: git submodule update --init
     - name: Install dependencies
       run: ci/install_dependencies.sh
+    - name: Pytorch info
+      run: python -c 'from torch.utils.collect_env import get_pretty_env_info; print(get_pretty_env_info())'
     - name: Install TorchANI
       run: python setup.py install
     - name: Download data files
