--- a/.github/workflows/upgrade-torch-nightly.yml
+++ b/.github/workflows/upgrade-torch-nightly.yml
@@ -27,6 +27,8 @@ jobs:
         du -bsh $(pip cache dir)
         if [[ $file_size -gt 10737418240 ]]; then pip cache purge; fi
         pip install --pre torch torchvision -f https://download.pytorch.org/whl/nightly/cu111/torch_nightly.html --upgrade
+    - name: Pytorch info
+      run: python -c 'from torch.utils.collect_env import get_pretty_env_info; print(get_pretty_env_info())'
 
 concurrency:
   group: upgrade-torch-nightly
