--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         miniconda-version: "latest"
         activate-environment: foo${{ matrix.python-version }}
-        auto-update-conda: false
+        auto-update-conda: true
         python-version: ${{ matrix.python-version }}
     - name: Conda info
       shell: bash -l {0}
