--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -1,6 +1,7 @@
 name: conda-release
 
 on:
+  pull_request:
   push:
     branches:
       - master
@@ -12,9 +13,17 @@ jobs:
 
     runs-on: [self-hosted, miniconda]
     strategy:
+      fail-fast: false
       max-parallel: 4
       matrix:
         python-version: [3.8, 3.6]
+        package: [torchani, torchani_cudf]
+        exclude:
+          # excludes py3.6 for torchani_cudf
+          - package: torchani_cudf
+            python-version: 3.6
+          - package: torchani
+            python-version: 3.6
 
     steps:
     - uses: actions/checkout@v2
@@ -59,7 +68,7 @@ jobs:
         export CONDA_TOKEN=${{ secrets.CONDA_TOKEN }}
         export SERVER_USERNAME=${{ secrets.SERVER_USERNAME }}
         export SERVER_PORT=${{ secrets.SERVER_PORT }}
-        export PACKAGE=torchani
+        export PACKAGE=${{ matrix.package }}
         ./conda/build_conda.sh release
     - name: Remove Server Key
       run: |
